@@ -1,1 +1,0 @@
-Makefile* linguist-language=C
